--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python: 
-    - "3.8"
-install: "pip3 install -r requirements.txt"
+- "3.8"
+install: "pip install -r requirements.txt"
 script:
-- SECRET_KEY="Tariq" ./manage.py test
+- SECRET_KEY="whatever" ./manage.py test
