--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-filter==2.2.0
 django-forms-bootstrap==3.1.0
 django-storages==1.8
 docutils==0.15.2
+env==0.1.0
 idna==2.8
 jmespath==0.9.4
 Pillow==7.0.0
