--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ env==0.1.0
 gunicorn==20.0.4
 idna==2.8
 jmespath==0.9.4
+numpy==1.18.1
 Pillow==7.0.0
 psycopg2==2.8.4
 pytz==2019.3
 requests==2.22.0
 s3transfer==0.3.1
+South==1.0.2
 stripe==2.41.1
 urllib3==1.25.7
