Settings file and style.
Turn debug off, static files and S3. Change the style for html pages to, style login, registration forms and password reset.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
 *.sqlite3
-env.py
 __pycache__
 *.png
+env.py
 static/
 media/
+*.pyc
+# Byte-compiled / optimized / DLL files
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
