--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ botocore==1.14.5
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==1.11.24
+django-environ==0.4.5
 django-filter==2.2.0
 django-forms-bootstrap==3.1.0
 django-storages==1.8
